k8s/keycloak/part/keycloak.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 12k
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: findyourjob.tech
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /keycloak/(.*)
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args: ['start', '--cache-stack=kubernetes', '--import-realm']
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7600

          # mount keycloak.json
          volumeMounts:
            - name: config
              mountPath: /opt/keycloak/data/import/keycloak.json
              subPath: 'keycloak.json'

      volumes:
        - name: 'config'
          configMap:
            name: 'config'
